--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,18 @@
 		    <version>2.3.3</version> <!-- 최신 버전 확인 후 변경 -->
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0</version>
+		</dependency>
 		       
 	</dependencies>
     <build>
